--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <article>
                 <h1>Who am I?</h1>
                 <p>
-                    I'm a college student who's looking to hit the ground running in the 2020's. As an aspiring software engineer, web developer and roboticist, I'm dipping my toes into all areas that interest me. 
+                    Wouldn't you like to know? How about this. This is my website, so I ask the questions around here. 
                 </p>
                 <p>
-                    My passion project to begin the year is called EZHZOSS - the Easy Horizons Open Signup System. It's an app for a raspberry pi that turns it into a tool that will automatically input camper's open activity sign ups into a database, and export the sign up to a sorted spreadsheet to be printed, for office use. I've been working at Horizons Day Camp for many years now, and one of the biggest technical/ logisitcal struggles we face is open sign ups. I hope that the creation of this tool will greatly improve the ease inputting data and reduce the time it takes. 
+                    So why are you here? Are you one of my friends who clicked the link in my Twitter bio? Are you a recuiter, and, if so, will you give me a job? Or are you a stranger, in which case, hello stranger!
                 </p>
-                <p>
-                    I'm self taught in most languages that I know. I prefer python over all other languages, but I also like JavaScript and C++. Conversely, I've grown to detest the languages that I've had to use for certain university coursework - I'm looking at you, Java and Scheme.
+                <p> 
+                    In any case, this site is cleary underwhelming and sometimes hard to look at. Check back regularly and see if I've made it look prettier? Or if I've added new features?
                 </p>
             </article>
         </section>
@@ -59,7 +59,7 @@
             <div class="flexbox">
                 <p>Brandeis Campus Rover</p>
                 <p>Horizons Toolkit</p>
-                <p>Twitterbot</p>
+                <p>Twitterbot 2020</p>
                 <p>BrandeisBot, a reddit bot on r/brandeis</p>
                 <p>This Website</p>
             </div>
