--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>
-            Welcome to Nate Dimick's Website
+            If I Had a Boat, I'd Go Out on The Ocean, You Know? And If I Had A Pony...
         </title>
         <link href="./cloudy.css" type="text/css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+        <link rel="icon" href="./Pictures/icon.png">
     </head>
     <body>
         <header class="banner home">
@@ -51,41 +52,17 @@
                 </iframe>
             </div>
             <p>
-                The year is 2017. The time is between 12:30 and 1:00pm Eastern. The date is a weekday in early August. And this video recording shows me, an 18 year old, getting a much younger child out in four square in order to acheive the coveted "Counselor Square". 
+                Pictured above: Me in my happy place. 
             </p>
         </section>
         <section id="current projects">
-            <h1>What am I currently up to?</h1>
+            <h1>What am I currently working on?</h1>
             <div class="flexbox">
-                <p>Brandeis Campus Rover</p>
+                <p>Brandeis Campus Rover Mark 4</p>
                 <p>Horizons Toolkit</p>
                 <p>Twitterbot 2020</p>
                 <p>BrandeisBot, a reddit bot on r/brandeis</p>
                 <p>This Website</p>
-            </div>
-        </section>
-        <section>
-            <h1>Recent Video Game Activity</h1>
-            <h2>Currently Playing</h2>
-            <div class="flexbox">
-                <p>Ring Fit Adventure</p>
-                <p>Luigi's Mansion 3</p>
-                <p>Wargroove</p>
-                <p>Into the Breach</p>
-            </div>
-            <h2>Looking forward to...</h2>
-            <div class="flexbox">
-                <p>Pokemon Mystery Dungeon: Rescue Team DX</p>
-                <p>Animal Crossing: New Horizons</p>
-                <p>Bravely Default II</p>
-                <p>Breath of the Wild Sequel</p>
-            </div>
-            <h2>Recently Finished</h2>
-            <div class="flexbox">
-                <p>Ni No Kuni: Wrath of the White Witch</p>
-                <p>Pokemon Shield</p>
-                <p>Dragon Quest XI S: Echoes of an Elusive Age Definitive Edition</p>
-                <p>Fire Emblem: Three Houses</p>
             </div>
         </section>
         <section id="other-pages" class="buttons internal">
@@ -95,8 +72,18 @@
             </nav>
         </section>
         <footer>
+            <h3> Contact Me</h3>
             <p>
-                Wow it's the bottom of the page
+               "Call me, beep me, if you want to reach me" - iconic words from the Kim Possible theme song. 
+            </p>
+            <p>
+                Do not call me. I hate phone calls, especially with people I do not know.
+            </p>
+            <p>
+                Don't beep me. Pagers are out of date and I don't have one. 
+            </p>
+            <p>
+                email me natdimick@gmail.com I guess if you really want to
             </p>
         </footer>
     </body>
