bot page update

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </header>
         <section id="blurb">
             <article>
-                <h1>Who am I?</h1>
+                <h1>About Me</h1>
                 <p>
-                    Wouldn't you like to know? How about this. This is my website, so I ask the questions around here. 
+                    I am a recent graduate of Brandeis University with a BS in Computer Science with an Economics minor. I'm currently working at the Hulbert Outdoor Center as I transition from school to a career. 
                 </p>
                 <p>
-                    So why are you here? Are you one of my friends who clicked the link in my Twitter bio? Are you a recuiter, and, if so, will you give me a job? Or are you a stranger, in which case, hello stranger!
+                    I'm an amateur roboticist, a fledgling software engineer, a novice web developer, an educator and an enhusiast of video and board games.
                 </p>
                 <p> 
                     In any case, this site is cleary underwhelming and sometimes hard to look at. Check back regularly and see if I've made it look prettier? Or if I've added new features?
@@ -60,7 +60,12 @@
             <div class="flexbox">
                 <p>Brandeis Campus Rover Mark 4</p>
                 <p>Horizons Toolkit</p>
-                <p>Twitterbot 2020</p>
+                <a href="./twitterbot.html">
+                    Twitterbot 1: Twitterbot for President 2020
+                </a>
+                <a href="./twitterbot2.html">
+                    Twitterbot 2: ChupEverything
+                </a>
                 <p>BrandeisBot, a reddit bot on r/brandeis</p>
                 <p>This Website</p>
             </div>
@@ -73,15 +78,6 @@
         </section>
         <footer>
             <h3> Contact Me</h3>
-            <p>
-               "Call me, beep me, if you want to reach me" - iconic words from the Kim Possible theme song. 
-            </p>
-            <p>
-                Do not call me. I hate phone calls, especially with people I do not know.
-            </p>
-            <p>
-                Don't beep me. Pagers are out of date and I don't have one. 
-            </p>
             <p>
                 email me natdimick@gmail.com I guess if you really want to
             </p>
