--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <header class="banner home">
             <h1>Welcome to Nate Dimick's corner of the internet</h1>
-            <h3>This is a place for you to learn about me, and for me to have fun</h3>
-            <h2>Links to my things</h2>
+            <h3>Hope you like it</h3>
+            <h2>Find me in other parts of the internet</h2>
             <div class="buttons external">
                 <a href="https://twitter.com/NateDimick" class="twitter">
                     <img src="https://cdn.worldvectorlogo.com/logos/twitter-3.svg" width="2%" height="2%"/>
@@ -34,6 +34,9 @@
         </header>
         <section id="blurb">
             <article>
+                <div class="profile-pic">
+                    <img src="./Pictures/me.jpg"/>
+                </div>
                 <h1>About Me</h1>
                 <p>
                     I am a recent graduate of Brandeis University with a BS in Computer Science with an Economics minor. I'm currently working at the Hulbert Outdoor Center as I transition from school to a career. 
@@ -46,29 +49,45 @@
                 </p>
             </article>
         </section>
-        <section id="counselor_square">
-            <div style="width:100%;height:0;padding:0% 0% 56% 0%;position:relative;">
-                <iframe src="https://giphy.com/embed/dyikyEVCWOakxCamGd" width="100%" height="100%" style="position:absolute;left:0%" frameBorder="0" class="giphy-embed" allowFullScreen>
-                </iframe>
-            </div>
-            <p>
-                Pictured above: Me in my happy place. 
-            </p>
-        </section>
-        <section id="current projects">
-            <h1>What am I currently working on?</h1>
+        <section id="completed-projects">
+            <h1>Some of my Work</h1>
             <div class="flexbox">
-                <p>Brandeis Campus Rover Mark 4</p>
-                <p>Horizons Toolkit</p>
                 <a href="./twitterbot.html">
                     Twitterbot 1: Twitterbot for President 2020
                 </a>
                 <a href="./twitterbot2.html">
                     Twitterbot 2: ChupEverything
                 </a>
-                <p>BrandeisBot, a reddit bot on r/brandeis</p>
+            </div>
+        </section>
+        <section id="current-projects">
+            <h1>What am I currently working on?</h1>
+            <div class="flexbox">
+                <p>Brandeis Campus Rover Mark 4</p>
+                <p>Horizons Toolkit</p>
+                <p>ROS-Voxelworld Bridge</p>
                 <p>This Website</p>
             </div>
+        </section>
+        <section id="future-projects">
+            <h1>Upcoming Projects</h1>
+            <div class="flexbox">
+                <p>BrandeisBot, a reddit bot on r/brandeis</p>
+                <p>Homemade Robot</p>
+            </div>
+        </section>
+        <section id="video">
+            <h1>Media</h1>
+            <div class="video-responsive">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/0JM2hulhctw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="video-responsive">
+                <iframe src="https://giphy.com/embed/dyikyEVCWOakxCamGd" width="100%" height="100%" style="position:absolute;left:0%" frameBorder="0" class="giphy-embed" allowFullScreen>
+                </iframe>
+            </div>
+            <p>
+                Pictured above: Me in my happy place. 
+            </p>
         </section>
         <section id="other-pages" class="buttons internal">
             <nav>
