--- a/twitterbot.html
+++ b/twitterbot.html
@@ -26,16 +26,51 @@
             <h1>
                 Tweets from my First Bot
             </h1>
-            <p>This is my first twitterbot, @FourthInCommand. It has a lot of backstory and not a lot to show for it. 
-                I lauched the bot in January of 2020 to mock the slew of presidential candidates. The bot operates on the simple premise of
-                graabbing two candidate's tweets and merging them on a shared word. The resulting tweet tries to balance the two source tweets,
-                and removes all mentions, links and other media. Sometimes words get replaced with trending topics, and sometimes emoji get inserted
-                (sidenote: the emoji generation might be the aspect of this project I'm most proud of). 
+            <p> Currently, the handle @FourthInCommand is dormant. I'll fire it back up with a new bot when I get inspiration for it. 
             </p>
+            <h1>Campaign Ended 4/22/2020</h1>
+            <p>From January to April of 2020 @FourthInCommand tweeted as if it were a candidate for president. The basic algorithm is sentance merger that pivots from sentance A to B around a shared keyword, usually "the", "of" or another common word. This usually produced incoherent garbage, which surprisingly garnered a handful of likes and few retweets.</p>
             <div class="timeline">
                 <a class="twitter-timeline" href="https://twitter.com/FourthInCommand"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
+            <!-- All Star Tweets
+                (Note: account has 20 non-bot tweets)
+                Based on likes/rts:
+            https://twitter.com/FourthInCommand/status/1233195169568026624
+            https://twitter.com/FourthInCommand/status/1228635374311706624
+            https://twitter.com/FourthInCommand/status/1224286440462249985
+            Based on I think They're funny:
+            https://twitter.com/FourthInCommand/status/1217928213466271744
+            https://twitter.com/FourthInCommand/status/1221764874734170112
+            https://twitter.com/FourthInCommand/status/1224180920426483712
+            https://twitter.com/FourthInCommand/status/1224950892266278912
+            https://twitter.com/FourthInCommand/status/1224966019774468097
+            https://twitter.com/FourthInCommand/status/1227399859830788096
+            https://twitter.com/FourthInCommand/status/1230626244288491520
+            https://twitter.com/FourthInCommand/status/1232108242915905536
+            https://twitter.com/FourthInCommand/status/1233587883124019202
+            https://twitter.com/FourthInCommand/status/1234101192411582466
+            https://twitter.com/FourthInCommand/status/1234372982392246272
+            https://twitter.com/FourthInCommand/status/1234539031926427648
+            https://twitter.com/FourthInCommand/status/1234554835724165121
+            https://twitter.com/FourthInCommand/status/1235490404008525825
+            https://twitter.com/FourthInCommand/status/1236260372840976384
+            https://twitter.com/FourthInCommand/status/1236607613036457986 
+            https://twitter.com/FourthInCommand/status/1237725202923962368
+            https://twitter.com/FourthInCommand/status/1238404672890621953
+            https://twitter.com/FourthInCommand/status/1239084127199956992
+            https://twitter.com/FourthInCommand/status/1239280340100722690
+            https://twitter.com/FourthInCommand/status/1240548794707709952
+            https://twitter.com/FourthInCommand/status/1241802066483429377
+            https://twitter.com/FourthInCommand/status/1242345499451162629
+            https://twitter.com/FourthInCommand/status/1242813681232158721
+            https://twitter.com/FourthInCommand/status/1247675569317326849
+            https://twitter.com/FourthInCommand/status/1248430664765988870
+            https://twitter.com/FourthInCommand/status/1248551399031521280
+            https://twitter.com/FourthInCommand/status/1249215869558931457
+            https://twitter.com/FourthInCommand/status/1249608342986805249
 
+        -->
             
         </section>
     </body>
