--- a/twitterbot2.html
+++ b/twitterbot2.html
@@ -32,6 +32,9 @@
                 color distance and image compression to get a product that generates a new cursed image every seven hours to share 
                 with the world. 
             </p>
+            <div class="profile-pic">
+                <img src="./Pictures/colorfulchup.jpg"/>
+            </div>
             <div class="timeline">
                 <a class="twitter-timeline" href="https://twitter.com/ChupEverything?ref_src=twsrc%5Etfw">Tweets by ChupEverything</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
