--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 </p>
             </article>
         </section>
-        <section id="completed-projects">
-            <h1>Some of my Work</h1>
+        <section id="visible-projects">
+            <h1>Twitterbots</h1>
             <div class="flexbox">
                 <a href="./twitterbot.html">
                     Twitterbot 1: Twitterbot for President 2020
@@ -59,21 +59,26 @@
                     Twitterbot 2: ChupEverything
                 </a>
             </div>
-        </section>
-        <section id="current-projects">
-            <h1>What am I currently working on?</h1>
+            <h1>Brandeis Campus Rover</h1>
             <div class="flexbox">
-                <p>Brandeis Campus Rover Mark 4</p>
-                <p>Horizons Toolkit</p>
-                <p>ROS-Voxelworld Bridge</p>
-                <p>This Website</p>
+                <a href="./campusrover.html#cr3">
+                    Campus Rover Software Stack
+                </a>
+                <a href="./campusrover.html#cr4">
+                    Campus Rover Model 4 Core
+                </a>
+                <a href="./campusrover.html#bridge">
+                    Project Kirby ROS-Unity Bridge
+                </a>
             </div>
         </section>
-        <section id="future-projects">
-            <h1>Upcoming Projects</h1>
+        <section id="hidden-projects">
+            <h1>Other Projects on the way. . . </h1>
             <div class="flexbox">
+                <p>Horizons Toolkit</p>
+                <p>This Website</p>
                 <p>BrandeisBot, a reddit bot on r/brandeis</p>
-                <p>Homemade Robot</p>
+                <p>Reverse-Engineering the Deal or No Deal Banker Algorithm</p>
             </div>
         </section>
         <section id="video">
@@ -81,6 +86,9 @@
             <div class="video-responsive">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/0JM2hulhctw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+            <p>
+                The 2015 NH-VT Vex Skyrise State Championships Finals Match 3, in which the #1 seeded alliance led by Rivendell Academy team 6191A: The Fellowship's robot Treebeard captured the state title
+            </p>
             <div class="video-responsive">
                 <iframe src="https://giphy.com/embed/dyikyEVCWOakxCamGd" width="100%" height="100%" style="position:absolute;left:0%" frameBorder="0" class="giphy-embed" allowFullScreen>
                 </iframe>
