late night update

--- a/index.html
+++ b/index.html
@@ -52,33 +52,31 @@
         <section id="visible-projects">
             <h1>Twitterbots</h1>
             <div class="flexbox">
-                <a href="./twitterbot.html">
+                <a href="./pages/twitterbot.html">
                     Twitterbot 1: Twitterbot for President 2020
                 </a>
-                <a href="./twitterbot2.html">
+                <a href="./pages/twitterbot2.html">
                     Twitterbot 2: ChupEverything
                 </a>
             </div>
             <h1>Brandeis Campus Rover</h1>
             <div class="flexbox">
-                <a href="./campusrover.html#cr3">
+                <a href="./pages/campusrover.html#cr3">
                     Campus Rover Software Stack
                 </a>
-                <a href="./campusrover.html#cr4">
+                <a href="./pages/campusrover.html#cr4">
                     Campus Rover Model 4 Core
                 </a>
-                <a href="./campusrover.html#bridge">
+                <a href="./pages/campusrover.html#bridge">
                     Project Kirby ROS-Unity Bridge
                 </a>
             </div>
-        </section>
-        <section id="hidden-projects">
             <h1>Other Projects on the way. . . </h1>
             <div class="flexbox">
-                <p>Horizons Toolkit</p>
-                <p>This Website</p>
+                <a href="./pages/otherprojects.html#horizons">Horizons Toolkit</a>
+                <a href="./pages/otherprojects.html#website">This Website</a>
                 <p>BrandeisBot, a reddit bot on r/brandeis</p>
-                <p>Reverse-Engineering the Deal or No Deal Banker Algorithm</p>
+                <a href="./pages/otherprojects.html#banker">Cracking the Deal or No Deal Banker Code</a>
             </div>
         </section>
         <section id="video">
