--- a/pages/campusrover.html
+++ b/pages/campusrover.html
@@ -4,27 +4,34 @@
         <title>
             Undergraduate Robotics Work
         </title>
-        <link href="./cloudy.css" type="text/css" rel="stylesheet">
+        <link href="../cloudy.css" type="text/css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-        <link rel="icon" href="./Pictures/icon.png">
+        <link rel="icon" href="../Pictures/icon.png">
     </head>
     <body>
         <header class="banner home">
             <div class="buttons">
-                <a href="./index.html">
+                <a href="../index.html">
                     <img src="https://image.flaticon.com/icons/svg/25/25694.svg" alt="Go Home">
                 </a>
             </div>
 
         </header>
+        <section>
+            <div class="profile-pic">
+                <img class="profile-pic" src="../Pictures/sportz.jpg"/>
+            </div>
+            <h1>Tales From the Brandeis Autonomous Robotics Lab</h1>
+            <p>"In theory, the difference between theory and practice is small. In practice, the difference between theory and practice is large"</p>
+        </section>
         <section id="cr3">
             <h1>Campus Rover Code Base</h1>
             <p>The Autonomous Robotics Lab at Brandeis and it's adjoining course exist to teach undergraduate and graduate students at Brandeis about common modern robotics concepts like SLAM, AMCL, computer vision, speech recognition and natural language processing, and to use this newfound knowledge to advance towards the completion of the campus rover, a fully autonomous robot capable of food or package delivery and tourguiding. During my time the Campus Rover project was still new, only in testing stages in our lab environemnt. Using modded Turtlebot3 Burgers codenamed Mutant and Alien, I contributed to the foundation of the Campus Rover software stack.</p>
             <p>My contributions included</p>
-            <ul>List title
+            <ul>
                 <li>An improved state manager API</li>
-                <li>A pickup detector using acceloraometer data to determine airorne or grounded status</li>
-                <li>Complete code base refactoring to a modular launch paradigm</li>
+                <li>A pickup detector using accelorometer data to determine airborne or grounded status</li>
+                <li>Complete code base refactoring to a modular, flexible and dynamic launch paradigm</li>
                 <li>Updated text-to-speach interface</li>
                 <li>navigation failure handling</li>
                 <li>Documentation improvements</li>
