--- a/pages/twitterbot.html
+++ b/pages/twitterbot.html
@@ -4,14 +4,14 @@
         <title>
             Democracy Is the Lynchpin of ... Democracy
         </title>
-        <link href="./cloudy.css" type="text/css" rel="stylesheet">
+        <link href="../cloudy.css" type="text/css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-        <link rel="icon" href="./Pictures/icon.png">
+        <link rel="icon" href="../Pictures/icon.png">
     </head>
     <body>
         <header class="banner home">
             <div class="buttons">
-                <a href="./index.html">
+                <a href="../index.html">
                     <img src="https://image.flaticon.com/icons/svg/25/25694.svg" alt="Go Home">
                 </a>
                 
