--- a/pages/twitterbot2.html
+++ b/pages/twitterbot2.html
@@ -4,14 +4,14 @@
         <title>
             Creamy, Umami ... Delicious
         </title>
-        <link href="./cloudy.css" type="text/css" rel="stylesheet">
+        <link href="../cloudy.css" type="text/css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-        <link rel="icon" href="./Pictures/icon.png">
+        <link rel="icon" href="../Pictures/icon.png">
     </head>
     <body>
         <header class="banner home">
             <div class="buttons">
-                <a href="./index.html">
+                <a href="../index.html">
                     <img src="https://image.flaticon.com/icons/svg/25/25694.svg" alt="Go Home">
                 </a>
                 
@@ -32,8 +32,8 @@
                 color distance and image compression to get a product that generates a new cursed image every seven hours to share 
                 with the world. 
             </p>
-            <div class="profile-pic">
-                <img src="./Pictures/colorfulchup.jpg"/>
+            <div class="profile-pic-wide">
+                <img src="../Pictures/colorfulchup.jpg"/>
             </div>
             <div class="timeline">
                 <a class="twitter-timeline" href="https://twitter.com/ChupEverything?ref_src=twsrc%5Etfw">Tweets by ChupEverything</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
