baby's first javascripts

--- a/pages/twitterbot2.html
+++ b/pages/twitterbot2.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
+        <title id='title'>
             Creamy, Umami ... Delicious
         </title>
         <link href="../cloudy.css" type="text/css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
         <link rel="icon" href="../Pictures/icon.png">
+        <script src="../load.js"></script>
     </head>
     <body>
         <header class="banner home">
