--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
+        <title id='title'>
             If I Had a Boat, I'd Go Out on The Ocean, You Know? And If I Had A Pony...
         </title>
         <link href="./cloudy.css" type="text/css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
         <link rel="icon" href="./Pictures/icon.png">
+        <script src="load.js"></script>
     </head>
     <body>
         <header class="banner home">
