new hobo-ish font and small js fixes

--- a/pages/campusrover.html
+++ b/pages/campusrover.html
@@ -5,6 +5,7 @@
             Undergraduate Robotics Work
         </title>
         <link href="../cloudy.css" type="text/css" rel="stylesheet">
+        <link rel="stylesheet" href="../memfont.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
         <link rel="icon" href="../Pictures/icon.png">
         <script src="../load.js"></script>
