--- a/pages/otherprojects.html
+++ b/pages/otherprojects.html
@@ -5,6 +5,7 @@
             Portfolio, Starboardfolio
         </title>
         <link href="../cloudy.css" type="text/css" rel="stylesheet">
+        <link rel="stylesheet" href="../memfont.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
         <link rel="icon" href="../Pictures/icon.png">
         <script src="../load.js"></script>
@@ -14,6 +15,7 @@
             <div class="buttons">
                 <a href="../index.html">
                     <img src="https://image.flaticon.com/icons/svg/25/25694.svg" alt="Go Home">
+                    <p>text</p>
                 </a>
             </div>
 
@@ -34,6 +36,13 @@
                 <li>To produce an equivalent or better product to if a human were doing the same tasks</li>
             </ul>
             <p>So, I settled on using email as the main user interface, because everyone knows how to use email. I also plotted to make the bodies of emails formatted in yaml, becuase it's syntacticaly simple and easy enough to teach without ever telling someone that it's a markup language. The end result has impressed our camp leadership and will greatly improve our workflow</p>
+            <a href="">
+                <div class="repo-link">
+                    <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg" width="5%" height="5%"/>
+                    <p>see this repo</p>
+                </div>
+                
+            </a> 
         </section>
         <section id="website">
             <h1>natedimick.github.io</h1>
