neat little github link buttons on project pages

--- a/pages/otherprojects.html
+++ b/pages/otherprojects.html
@@ -36,17 +36,23 @@
                 <li>To produce an equivalent or better product to if a human were doing the same tasks</li>
             </ul>
             <p>So, I settled on using email as the main user interface, because everyone knows how to use email. I also plotted to make the bodies of emails formatted in yaml, becuase it's syntacticaly simple and easy enough to teach without ever telling someone that it's a markup language. The end result has impressed our camp leadership and will greatly improve our workflow</p>
-            <a href="">
+            <a href="https://github.com/NateDimick/horizons_toolkit">
                 <div class="repo-link">
-                    <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg" width="5%" height="5%"/>
-                    <p>see this repo</p>
+                    <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg" width="23%" height="23%"/>
+                    <span>see this repo</span>
                 </div>
-                
             </a> 
+            <p style="text-align: center;">(This one might be private for a while until it's ready)</p>
         </section>
         <section id="website">
             <h1>natedimick.github.io</h1>
             <p>Here you are! on a whim I decided I needed some sort of web presence and needed to learn how basic frontend web technologies work. this site is the fruits of my labors. I'm not an artisit, so this site might not look amazing. I'm not trained in UI, so it might not be the most friendly website. I also consider this a side project, so I don't put as much effort into this as some other projects. With all that said, I believe this site gets the job done</p>
+            <a href="https://github.com/NateDimick/natedimick.github.io">
+                <div class="repo-link">
+                    <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg" width="23%" height="23%"/>
+                    <span>see this repo</span>
+                </div>
+            </a> 
         </section>
         <section id="banker">
             <h1>Solving the Deal or No Deal Banker Algorithm</h1>
