--- a/pages/twitterbot2.html
+++ b/pages/twitterbot2.html
@@ -34,6 +34,12 @@
                 color distance and image compression to get a product that generates a new cursed image every seven hours to share 
                 with the world. 
             </p>
+            <a href="https://github.com/NateDimick/chupeverything">
+                <div class="repo-link">
+                    <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg" width="23%" height="23%"/>
+                    <span>see this repo</span>
+                </div>
+            </a> 
             <div class="profile-pic-wide">
                 <img src="../Pictures/colorfulchup.jpg"/>
             </div>
