--- a/pages/campusrover.html
+++ b/pages/campusrover.html
@@ -38,16 +38,32 @@
                 <li>navigation failure handling</li>
                 <li>Documentation improvements</li>
             </ul>
-            
+            <a href="https://github.com/campusrover/cr_ros_3">
+                <div class="repo-link">
+                    <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg" width="23%" height="23%"/>
+                    <span>see this repo</span>
+                </div>
+            </a> 
         </section>
         <section id="cr4">
             <h1>Campus Rover Model 4 Core Hardware Interface</h1>
             <p>A group independent study conducted from January to March of 2020 with the supervision of Professor Pito Salas. The goal was to create hardware-specific software for a homebrew robot model designed by our resident roboticist Charlie Squires. This model would be cheaper to produce, have better performance and have the same capabilities as a Turtlebot3 Burger. The hardware was based on a Raspberry Pi 4 and a TI Tiva C microcontroller. It would be fully capable of SLAM with sensors including ultrasonic, lidar and a 3d depth camera. In our team, I specialized in mobilty, and worked to acheive accurate odometry and speed control using a ROS control hardware interface and a PID loop to ensure that the actual motion of the robot matched the commands given to it, which in turn generated accurate odometry measurements. This project was cut short due to COVID-19.</p>
+            <a href="https://github.com/campusrover/rover_4_core">
+                <div class="repo-link">
+                    <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg" width="23%" height="23%"/>
+                    <span>see this repo</span>
+                </div>
+            </a> 
         </section>
         <section id="bridge">
             <h1>Robot Service Bridges</h1>
             <p>Following remote relocation due to COVID-19, my work turned from the Campus Rover to a hybrid project with Professor James Pustejovsky's lab. My task was to build part of a bridge between ROS, where a real robot is generating information, to Unity, where the same environemnt would be generated. The central aspect of this project revolved around using OpenCV to turn a ROS map image into a set of line segments. This involved using Hough Lines and an implementation of the Tavares and Padilha line merging algorithm. This project has become the base for a grander project of ROS node services that communicate with non-ROS applications via JSON passed through Redis.</p>
-
+            <a href="https://github.com/campusrover/robot_services">
+                <div class="repo-link">
+                    <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg" width="23%" height="23%"/>
+                    <span>see this repo</span>
+                </div>
+            </a> 
         </section>
     </body>
     <footer>
