--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <div class="flexbox">
                 <a href="./pages/otherprojects.html#horizons">Horizons Toolkit</a>
                 <a href="./pages/otherprojects.html#website">This Website</a>
+                <a href="./pages/otherprojects.html#gfs">Gazebo Fiducial Spawner</a>
                 <p>BrandeisBot, a reddit bot on r/brandeis</p>
                 <a href="./pages/otherprojects.html#banker">Cracking the Deal or No Deal Banker Code</a>
             </div>
