--- a/pages/otherprojects.html
+++ b/pages/otherprojects.html
@@ -15,7 +15,6 @@
             <div class="buttons">
                 <a href="../index.html">
                     <img src="https://image.flaticon.com/icons/svg/25/25694.svg" alt="Go Home">
-                    <p>text</p>
                 </a>
             </div>
 
@@ -48,6 +47,16 @@
             <h1>natedimick.github.io</h1>
             <p>Here you are! on a whim I decided I needed some sort of web presence and needed to learn how basic frontend web technologies work. this site is the fruits of my labors. I'm not an artisit, so this site might not look amazing. I'm not trained in UI, so it might not be the most friendly website. I also consider this a side project, so I don't put as much effort into this as some other projects. With all that said, I believe this site gets the job done</p>
             <a href="https://github.com/NateDimick/natedimick.github.io">
+                <div class="repo-link">
+                    <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg" width="23%" height="23%"/>
+                    <span>see this repo</span>
+                </div>
+            </a> 
+        </section>
+        <section id="gfs">
+            <h1>Fiducial Model Spawner for Gazebo</h1>
+            <p>While working remotely on the Campus Rover, The need to work with fiducials arose. I found a github repo by user nicolov that had an example blueprint for spawning a single fiducial in a gazebo simulation, but it was limited to just one and required a handful of manual file management to make more. So I made this package to facilitate multiple fiducials being generated and spawned into a gazebo simulation without a user ever having to use a fiducial generation tool or create a model themselves.</p>
+            <a href="https://github.com/NateDimick/gazebo_fiducial_spawner">
                 <div class="repo-link">
                     <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg" width="23%" height="23%"/>
                     <span>see this repo</span>
