--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <ul style="text-align: center;">
                 <li style="background-color: whitesmoke; padding: 1%;">There might by typos on this page. Sorry.</li>
                 <li style="background-color: whitesmoke; padding: 1%;"><a href="https://www.fontspace.com/memories-font-f25917">Font: MemoriesRegular</a></li>
-                <li style="background-color: whitesmoke; padding: 1%;"> Copyright Nate Dimick 2020</li>
+                <li style="background-color: whitesmoke; padding: 1%;">Not Copyright Nate Dimick 2020</li>
             </ul>
         </footer>
     </body>
