--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <body>
         <header>
             <h1>Nate Dimick</h1>
-            <div class="descriptors" style="width: 75%; margin-left: 16%;">
-                <h2>Software Engineer.</h2>
-                <h2>Roboticist.</h2>
-                <h2>Educator.</h2>
-                <h2 id="my-titles">Other.</h2>
-            </div>
+            <ol class="descriptors" style="text-align: center;">
+                <li><h2>Software Engineer.</h2></li>
+                <li><h2>Roboticist.</h2></li>
+                <li><h2>Educator.</h2></li>
+                <li><h2 id="my-titles">Other.</h2></li>
+            </ol>
             <ol class="social-media">
                 <li><a href="https://twitter.com/NateDimick">Twitter</a></li>
                 <li><a href="https://github.com/NateDimick">Github</a></li>
